# xmppsocial

./: Cargo.toml
examples/: get_items.rs
src/: lib.rs  main.rs
templates/: entry.tera.atom  index.tera.html
