[package]
name = "xmppsocial"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
dotenv = "0.15.0"
feed-rs = "2.1.1"
flume = "0.11.0"
tokio = "1.40.0"
tokio-rustls = "0.26.0"
tokio-stream = "0.1.16"
tokio-xmpp = { git = "https://gitlab.com/xmpp-rs/xmpp-rs.git" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# xmpp = "0.6.0"
